<?xml version="1.0"?>
<package format="2">
  <name>sektion_cabinet_model</name>
  <version>0.0.0</version>
  <description>The cabinet_model package</description>

  <maintainer email="jissac@nvidia.com">Jan Issacv</maintainer>

  <license>(c) Nvidia Corp</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
